hphp/test/slow/class_level_where_clauses/class_level_where_clauses_disabled.php.expectf
Fatal error: Class-level where clauses are disabled in %s on line 12
